<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="10">
            <TextView
                android:id="@+id/top_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/num_text_size"
                android:text="0"
                android:gravity="right"
                android:maxLines="1"/>
            <TextView
                android:id="@+id/bottom_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/num_text_size"
                android:text="@string/zero"
                android:gravity="right"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/unit_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/inches"
                android:textSize="28sp"
                android:gravity="bottom|left"
                android:maxLines="1"/>
            <TextView
                android:id="@+id/unit_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/millimeters"
                android:textSize="36sp"
                android:gravity="bottom|left"
                android:maxLines="1"/>
        </LinearLayout>

    </LinearLayout>

    <GridLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        android:useDefaultMargins="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/button0"
            android:layout_row="3"
            android:layout_column="0"
            android:onClick="putNumber"
            android:text="@string/zero" />
        <Button
            android:id="@+id/button1"
            android:text="@string/one"
            android:onClick="putNumber"
            android:layout_row="3"
            android:layout_column="1"/>
        <Button
            android:id="@+id/button2"
            android:text="@string/two"
            android:onClick="putNumber"
            android:layout_row="3"
            android:layout_column="2"/>
        <Button
            android:id="@+id/button3"
            android:text="@string/three"
            android:onClick="putNumber"
            android:layout_row="3"
            android:layout_column="3"/>
        <Button
            android:id="@+id/button4"
            android:text="@string/four"
            android:onClick="putNumber"
            android:layout_row="2"
            android:layout_column="1"/>
    </GridLayout>

</android.support.constraint.ConstraintLayout>